--- a/src/style.css
+++ b/src/style.css
@@ -14,7 +14,7 @@ body{
 #header{
     width: 100%;
     height: 100vh;
-    /* background-image: url(); */
+    background-image: url(img/);
 }
 .container{
     padding: 10px 10%;
