--- a/src/style.css
+++ b/src/style.css
@@ -14,7 +14,7 @@ body{
 #header{
     width: 100%;
     height: 100vh;
-    background-image: url(img/);
+    background-image: url(img/header_background.png);
 }
 .container{
     padding: 10px 10%;
