--- a/src/style.css
+++ b/src/style.css
@@ -55,15 +55,18 @@ nav ul li a:hover::after{
     margin-top: 20%;
     font-size: 25px;
 }
+.hedaer-text p{
+    font-size: 21px;
+}
 .header-text h1{
-    font-size: 40px;
+    font-size: 35px;
     margin-top: 20px;
 }
 .header-text h1 span{
     color: #00BFFF;
 }
 .header-text h2{
-    font-size: 24px;
+    font-size: 21px;
     font-weight: 200;
     margin-top: 20px;
 }
