--- a/src/style.css
+++ b/src/style.css
@@ -14,9 +14,9 @@ body{
 #header{
     width: 100%;
     height: 100vh;
-/*     background-image: url(../img/header_background.png); */
+    /* background-image: url(../img/header_background.png);
     background-size: cover;
-    background-position: center;
+    background-position: center; */
 }
 .container{
     padding: 10px 10%;
@@ -37,6 +37,8 @@ nav ul li a{
     text-decoration: none;
     font-size: 18px;
     position: relative;
+    font-weight: 500;
+    margin-left: 25px;
 }
 nav ul li a::after{
     content: '';
@@ -52,8 +54,9 @@ nav ul li a:hover::after{
     width: 100%;
 }
 .header-text{
-    margin-top: 20%;
+    /* margin-top: 20%; */
     font-size: 25px;
+    max-width: 60%;
 }
 .hedaer-text p{
     font-size: 21px;
@@ -74,6 +77,61 @@ nav ul li a:hover::after{
     display: inline-block;
     background: #00BFFF;
     font-size: 20px;
+}
+.home{
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 10%;
+}
+.home-img{
+    width: 370px;
+    height: 370px;
+}
+.home-img .glowing-img{
+    position: relative;
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.glowing-img span{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: #00BFFF;
+    border-radius: 50%;
+}
+.glowing-img span:nth-child(1) {
+    filter: blur(10px);
+}
+.home-img .glowing-img::after{
+    content: '';
+    position: absolute;
+    width: 360px;
+    height: 360px;
+    background: #080808;
+    border-radius: 50%;
+}
+.glowing-img .image{
+    position: relative;
+    width: 360px;
+    height: 360px;
+    border-radius: 50%;
+    z-index: 1;
+    overflow: hidden;
+}
+.image img{
+    position: absolute;
+    left: 50%;
+    transform: translate(-50%);
+    max-width: 340px;
+    height: 360px;
+    object-fit: cover;
 }
 
 /*------------About--------------*/
@@ -285,6 +343,29 @@ form .btn2{
     margin-top: 20px;
 }
 
+/* Scroll Up */
+#scrollUpBtn {
+    display: none;
+    position: fixed;
+    width: 40px;
+    height: 40px;
+    bottom: 20px;
+    right: 20px;
+    z-index: 99;
+    font-size: 18px;
+    border: none;
+    outline: none;
+    background-color: white;
+    color: black;
+    cursor: pointer;
+    /* padding: 15px; */
+    border-radius: 50%;
+  }
+  
+#scrollUpBtn:hover {
+    background-color: #555;
+}  
+
 /*-----------Responsive---------*/
 nav .fa-solid{
     display: none;
@@ -296,6 +377,7 @@ nav .fa-solid{
     } */
     .header-text{
         margin-top: 100%;
+        max-width: 100%;
         font-size: 13px;
     }
     .header-text h1{
@@ -331,6 +413,9 @@ nav .fa-solid{
         top: 25px;
         left: 25px;
         cursor: pointer;
+    }
+    .home-img{
+        display: none;
     }
     .sub-title{
         font-size: 40px;
