--- a/src/style.css
+++ b/src/style.css
@@ -206,6 +206,7 @@ nav ul li a:hover::after{
 /*---------Portfolio-------*/
 #portfolio{
     padding: 50px 0;
+    margin-bottom: 100px;
 }
 .project-list{
     display: grid;
