--- a/src/style.css
+++ b/src/style.css
@@ -206,7 +206,7 @@ nav ul li a:hover::after{
 /*---------Portfolio-------*/
 #portfolio{
     padding: 50px 0;
-    margin-bottom: 100px;
+    height: 90vh;
 }
 .project-list{
     display: grid;
